target/classes/compi/Parser/y.output
   0  $accept : prog $end

   1  prog : '{' sentencias '}'
   2       | '{' sentencias

   3  sentencias : sentencias sen_declarativa
   4             | sentencias sen_ejecutable
   5             | sentencias sen_control
   6             | sen_ejecutable
   7             | sen_control
   8             | sen_declarativa
   9             | error ','

  10  sen_declarativa : tipo list_var ','
  11                  | sentencia_check tipo list_var ','
  12                  | tipo list_var
  13                  | funcion
  14                  | clase

  15  sentencia_check : CHECK

  16  tipo : SHORT
  17       | UINT
  18       | FLOAT
  19       | ID

  20  CTE : CTE_SHORT
  21      | CTE_UINT
  22      | CTE_FLOAT
  23      | '-' CTE_SHORT
  24      | '-' CTE_FLOAT
  25      | '-' CTE_UINT

  26  list_var : list_var ';' ID
  27           | ID

  28  funcion : header_funcion '{' cuerpo_funcion sen_retorno '}'
  29          | header_funcion '{' cuerpo_funcion seleccion_func '}'
  30          | header_funcion cuerpo_funcion '}'

  31  header_funcion : VOID ID '(' parametro ')'
  32                 | VOID ID '(' ')'

  33  parametro : tipo ID

  34  cuerpo_funcion : cuerpo_funcion sen_declarativa
  35                 | cuerpo_funcion sen_ejecutable
  36                 | sen_declarativa
  37                 | sen_ejecutable

  38  sen_retorno : RETURN ','

  39  sen_ejecutable : asignacion ','
  40                 | inv_funcion ','
  41                 | seleccion ','
  42                 | imprimir ','
  43                 | inv_metodo ','

  44  asignacion : ID '=' exp_aritmetica
  45             | atributo_clase '=' exp_aritmetica
  46             | ID '='
  47             | '=' exp_aritmetica
  48             | atributo_clase '='
  49             | atributo_clase exp_aritmetica

  50  inv_funcion : ID '(' exp_aritmetica ')'
  51              | ID '(' ')'
  52              | ID '(' exp_aritmetica
  53              | ID ')'
  54              | ID '('

  55  inv_metodo : atributo_clase '(' exp_aritmetica ')'
  56             | atributo_clase '(' ')'
  57             | atributo_clase '('
  58             | atributo_clase ')'

  59  atributo_clase : ID '.' ID
  60                 | atributo_clase '.' ID

  61  seleccion_func : IF condicion bloque_ejecutable_func ELSE bloque_ejecutable_func END_IF ','
  62                 | IF condicion bloque_ejecutable_func END_IF ','
  63                 | IF condicion ELSE bloque_ejecutable_func END_IF
  64                 | IF condicion bloque_ejecutable_func ELSE END_IF

  65  seleccion : IF condicion cuerpo_then END_IF
  66            | IF condicion cuerpo_then ELSE cuerpo_else END_IF

  67  cuerpo_then : bloque_sen_ejecutable

  68  cuerpo_else : bloque_sen_ejecutable

  69  condicion : '(' exp_logica ')'

  70  exp_logica : exp_aritmetica comparador exp_aritmetica
  71             | exp_aritmetica comparador
  72             | comparador exp_aritmetica
  73             | exp_aritmetica
  74             | comparador

  75  exp_aritmetica : exp_aritmetica '+' termino
  76                 | exp_aritmetica '-' termino
  77                 | termino
  78                 | exp_aritmetica '+' '+' termino
  79                 | exp_aritmetica '+' '*' termino
  80                 | exp_aritmetica '+' '/' termino
  81                 | exp_aritmetica '-' '+' termino
  82                 | exp_aritmetica '-' '*' termino
  83                 | exp_aritmetica '-' '/' termino

  84  termino : termino '*' factor
  85          | termino '/' factor
  86          | factor
  87          | termino '*' '*' factor
  88          | termino '*' '/' factor
  89          | termino '/' '*' factor
  90          | termino '/' '/' factor

  91  factor : ID
  92         | ID INCREMENT
  93         | CTE
  94         | atributo_clase

  95  comparador : NOT_EQUAL
  96             | EQUAL
  97             | GREATER_EQUAL
  98             | LESS_EQUAL
  99             | '<'
 100             | '>'

 101  bloque_sen_ejecutable : sen_ejecutable
 102                        | '{' sen_ejecutable_r '}'
 103                        | sen_ejecutable_r '}'
 104                        | '{' sen_ejecutable_r
 105                        | '{' '}'

 106  bloque_ejecutable_func : sen_retorno
 107                         | '{' sen_ejecutable_r sen_retorno '}'
 108                         | ','

 109  sen_ejecutable_r : sen_ejecutable_r sen_ejecutable
 110                   | sen_ejecutable

 111  imprimir : PRINT STR_1LN
 112           | PRINT ','

 113  sen_control : inicio_while condicion DO bloque_sen_ejecutable ','
 114              | inicio_while condicion DO ','

 115  inicio_while : WHILE

 116  clase : class_header '{' '}'
 117        | class_header '{' cuerpo_clase '}'
 118        | class_header '{' cuerpo_clase herencia_clase '}'
 119        | class_header '{' herencia_clase '}'
 120        | CLASS ID ','
 121        | class_header cuerpo_clase '}'

 122  class_header : CLASS ID

 123  cuerpo_clase : cuerpo_clase sen_declarativa
 124               | cuerpo_clase herencia_clase sen_declarativa
 125               | herencia_clase sen_declarativa
 126               | sen_declarativa

 127  herencia_clase : ID ','

state 0
	$accept : . prog $end  (0)

	'{'  shift 1
	.  error

	prog  goto 2


state 1
	prog : '{' . sentencias '}'  (1)
	prog : '{' . sentencias  (2)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	WHILE  shift 9
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	CHECK  shift 13
	'='  shift 14
	.  error

	sentencias  goto 15
	sen_declarativa  goto 16
	sen_ejecutable  goto 17
	sen_control  goto 18
	tipo  goto 19
	sentencia_check  goto 20
	funcion  goto 21
	clase  goto 22
	header_funcion  goto 23
	asignacion  goto 24
	inv_funcion  goto 25
	seleccion  goto 26
	imprimir  goto 27
	inv_metodo  goto 28
	atributo_clase  goto 29
	inicio_while  goto 30
	class_header  goto 31


state 2
	$accept : prog . $end  (0)

	$end  accept


state 3
	sentencias : error . ','  (9)

	','  shift 32
	.  error


state 4
	tipo : ID .  (19)
	asignacion : ID . '=' exp_aritmetica  (44)
	asignacion : ID . '='  (46)
	inv_funcion : ID . '(' exp_aritmetica ')'  (50)
	inv_funcion : ID . '(' ')'  (51)
	inv_funcion : ID . '(' exp_aritmetica  (52)
	inv_funcion : ID . ')'  (53)
	inv_funcion : ID . '('  (54)
	atributo_clase : ID . '.' ID  (59)

	'('  shift 33
	')'  shift 34
	'='  shift 35
	'.'  shift 36
	ID  reduce 19


state 5
	seleccion : IF . condicion cuerpo_then END_IF  (65)
	seleccion : IF . condicion cuerpo_then ELSE cuerpo_else END_IF  (66)

	'('  shift 37
	.  error

	condicion  goto 38


state 6
	imprimir : PRINT . STR_1LN  (111)
	imprimir : PRINT . ','  (112)

	STR_1LN  shift 39
	','  shift 40
	.  error


state 7
	clase : CLASS . ID ','  (120)
	class_header : CLASS . ID  (122)

	ID  shift 41
	.  error


state 8
	header_funcion : VOID . ID '(' parametro ')'  (31)
	header_funcion : VOID . ID '(' ')'  (32)

	ID  shift 42
	.  error


state 9
	inicio_while : WHILE .  (115)

	.  reduce 115


state 10
	tipo : SHORT .  (16)

	.  reduce 16


state 11
	tipo : UINT .  (17)

	.  reduce 17


state 12
	tipo : FLOAT .  (18)

	.  reduce 18


state 13
	sentencia_check : CHECK .  (15)

	.  reduce 15


state 14
	asignacion : '=' . exp_aritmetica  (47)

	ID  shift 43
	CTE_SHORT  shift 44
	CTE_UINT  shift 45
	CTE_FLOAT  shift 46
	'-'  shift 47
	.  error

	CTE  goto 48
	exp_aritmetica  goto 49
	atributo_clase  goto 50
	termino  goto 51
	factor  goto 52


state 15
	prog : '{' sentencias . '}'  (1)
	prog : '{' sentencias .  (2)
	sentencias : sentencias . sen_declarativa  (3)
	sentencias : sentencias . sen_ejecutable  (4)
	sentencias : sentencias . sen_control  (5)

	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	WHILE  shift 9
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	CHECK  shift 13
	'}'  shift 53
	'='  shift 14
	$end  reduce 2

	sen_declarativa  goto 54
	sen_ejecutable  goto 55
	sen_control  goto 56
	tipo  goto 19
	sentencia_check  goto 20
	funcion  goto 21
	clase  goto 22
	header_funcion  goto 23
	asignacion  goto 24
	inv_funcion  goto 25
	seleccion  goto 26
	imprimir  goto 27
	inv_metodo  goto 28
	atributo_clase  goto 29
	inicio_while  goto 30
	class_header  goto 31


state 16
	sentencias : sen_declarativa .  (8)

	.  reduce 8


state 17
	sentencias : sen_ejecutable .  (6)

	.  reduce 6


state 18
	sentencias : sen_control .  (7)

	.  reduce 7


state 19
	sen_declarativa : tipo . list_var ','  (10)
	sen_declarativa : tipo . list_var  (12)

	ID  shift 57
	.  error

	list_var  goto 58


state 20
	sen_declarativa : sentencia_check . tipo list_var ','  (11)

	ID  shift 59
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	.  error

	tipo  goto 60


state 21
	sen_declarativa : funcion .  (13)

	.  reduce 13


state 22
	sen_declarativa : clase .  (14)

	.  reduce 14


state 23
	funcion : header_funcion . '{' cuerpo_funcion sen_retorno '}'  (28)
	funcion : header_funcion . '{' cuerpo_funcion seleccion_func '}'  (29)
	funcion : header_funcion . cuerpo_funcion '}'  (30)

	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	CHECK  shift 13
	'{'  shift 61
	'='  shift 14
	.  error

	sen_declarativa  goto 62
	sen_ejecutable  goto 63
	tipo  goto 19
	sentencia_check  goto 20
	funcion  goto 21
	clase  goto 22
	header_funcion  goto 23
	cuerpo_funcion  goto 64
	asignacion  goto 24
	inv_funcion  goto 25
	seleccion  goto 26
	imprimir  goto 27
	inv_metodo  goto 28
	atributo_clase  goto 29
	class_header  goto 31


state 24
	sen_ejecutable : asignacion . ','  (39)

	','  shift 65
	.  error


state 25
	sen_ejecutable : inv_funcion . ','  (40)

	','  shift 66
	.  error


state 26
	sen_ejecutable : seleccion . ','  (41)

	','  shift 67
	.  error


state 27
	sen_ejecutable : imprimir . ','  (42)

	','  shift 68
	.  error


state 28
	sen_ejecutable : inv_metodo . ','  (43)

	','  shift 69
	.  error


state 29
	asignacion : atributo_clase . '=' exp_aritmetica  (45)
	asignacion : atributo_clase . '='  (48)
	asignacion : atributo_clase . exp_aritmetica  (49)
	inv_metodo : atributo_clase . '(' exp_aritmetica ')'  (55)
	inv_metodo : atributo_clase . '(' ')'  (56)
	inv_metodo : atributo_clase . '('  (57)
	inv_metodo : atributo_clase . ')'  (58)
	atributo_clase : atributo_clase . '.' ID  (60)

	ID  shift 43
	CTE_SHORT  shift 44
	CTE_UINT  shift 45
	CTE_FLOAT  shift 46
	'-'  shift 47
	'('  shift 70
	')'  shift 71
	'='  shift 72
	'.'  shift 73
	.  error

	CTE  goto 48
	exp_aritmetica  goto 74
	atributo_clase  goto 50
	termino  goto 51
	factor  goto 52


state 30
	sen_control : inicio_while . condicion DO bloque_sen_ejecutable ','  (113)
	sen_control : inicio_while . condicion DO ','  (114)

	'('  shift 37
	.  error

	condicion  goto 75


state 31
	clase : class_header . '{' '}'  (116)
	clase : class_header . '{' cuerpo_clase '}'  (117)
	clase : class_header . '{' cuerpo_clase herencia_clase '}'  (118)
	clase : class_header . '{' herencia_clase '}'  (119)
	clase : class_header . cuerpo_clase '}'  (121)

	ID  shift 76
	CLASS  shift 7
	VOID  shift 8
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	CHECK  shift 13
	'{'  shift 77
	.  error

	sen_declarativa  goto 78
	tipo  goto 19
	sentencia_check  goto 20
	funcion  goto 21
	clase  goto 22
	header_funcion  goto 23
	class_header  goto 31
	cuerpo_clase  goto 79
	herencia_clase  goto 80


state 32
	sentencias : error ',' .  (9)

	.  reduce 9


state 33
	inv_funcion : ID '(' . exp_aritmetica ')'  (50)
	inv_funcion : ID '(' . ')'  (51)
	inv_funcion : ID '(' . exp_aritmetica  (52)
	inv_funcion : ID '(' .  (54)

	ID  shift 43
	CTE_SHORT  shift 44
	CTE_UINT  shift 45
	CTE_FLOAT  shift 46
	'-'  shift 47
	')'  shift 81
	','  reduce 54

	CTE  goto 48
	exp_aritmetica  goto 82
	atributo_clase  goto 50
	termino  goto 51
	factor  goto 52


state 34
	inv_funcion : ID ')' .  (53)

	.  reduce 53


state 35
	asignacion : ID '=' . exp_aritmetica  (44)
	asignacion : ID '=' .  (46)

	ID  shift 43
	CTE_SHORT  shift 44
	CTE_UINT  shift 45
	CTE_FLOAT  shift 46
	'-'  shift 47
	','  reduce 46

	CTE  goto 48
	exp_aritmetica  goto 83
	atributo_clase  goto 50
	termino  goto 51
	factor  goto 52


state 36
	atributo_clase : ID '.' . ID  (59)

	ID  shift 84
	.  error


state 37
	condicion : '(' . exp_logica ')'  (69)

	ID  shift 43
	CTE_SHORT  shift 44
	CTE_UINT  shift 45
	CTE_FLOAT  shift 46
	GREATER_EQUAL  shift 85
	LESS_EQUAL  shift 86
	EQUAL  shift 87
	NOT_EQUAL  shift 88
	'-'  shift 47
	'<'  shift 89
	'>'  shift 90
	.  error

	CTE  goto 48
	exp_aritmetica  goto 91
	atributo_clase  goto 50
	exp_logica  goto 92
	comparador  goto 93
	termino  goto 51
	factor  goto 52


state 38
	seleccion : IF condicion . cuerpo_then END_IF  (65)
	seleccion : IF condicion . cuerpo_then ELSE cuerpo_else END_IF  (66)

	ID  shift 94
	IF  shift 5
	PRINT  shift 6
	'{'  shift 95
	'='  shift 14
	.  error

	sen_ejecutable  goto 96
	asignacion  goto 24
	inv_funcion  goto 25
	seleccion  goto 26
	imprimir  goto 27
	inv_metodo  goto 28
	atributo_clase  goto 29
	cuerpo_then  goto 97
	bloque_sen_ejecutable  goto 98
	sen_ejecutable_r  goto 99


state 39
	imprimir : PRINT STR_1LN .  (111)

	.  reduce 111


state 40
	imprimir : PRINT ',' .  (112)

	.  reduce 112


state 41
	clase : CLASS ID . ','  (120)
	class_header : CLASS ID .  (122)

	','  shift 100
	ID  reduce 122
	CLASS  reduce 122
	VOID  reduce 122
	SHORT  reduce 122
	UINT  reduce 122
	FLOAT  reduce 122
	CHECK  reduce 122
	'{'  reduce 122


state 42
	header_funcion : VOID ID . '(' parametro ')'  (31)
	header_funcion : VOID ID . '(' ')'  (32)

	'('  shift 101
	.  error


state 43
	atributo_clase : ID . '.' ID  (59)
	factor : ID .  (91)
	factor : ID . INCREMENT  (92)

	INCREMENT  shift 102
	'.'  shift 36
	GREATER_EQUAL  reduce 91
	LESS_EQUAL  reduce 91
	EQUAL  reduce 91
	NOT_EQUAL  reduce 91
	'+'  reduce 91
	'-'  reduce 91
	'*'  reduce 91
	'/'  reduce 91
	','  reduce 91
	')'  reduce 91
	'<'  reduce 91
	'>'  reduce 91


state 44
	CTE : CTE_SHORT .  (20)

	.  reduce 20


state 45
	CTE : CTE_UINT .  (21)

	.  reduce 21


state 46
	CTE : CTE_FLOAT .  (22)

	.  reduce 22


state 47
	CTE : '-' . CTE_SHORT  (23)
	CTE : '-' . CTE_FLOAT  (24)
	CTE : '-' . CTE_UINT  (25)

	CTE_SHORT  shift 103
	CTE_UINT  shift 104
	CTE_FLOAT  shift 105
	.  error


state 48
	factor : CTE .  (93)

	.  reduce 93


state 49
	asignacion : '=' exp_aritmetica .  (47)
	exp_aritmetica : exp_aritmetica . '+' termino  (75)
	exp_aritmetica : exp_aritmetica . '-' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (78)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (79)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (81)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (82)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (83)

	'+'  shift 106
	'-'  shift 107
	','  reduce 47


state 50
	atributo_clase : atributo_clase . '.' ID  (60)
	factor : atributo_clase .  (94)

	'.'  shift 73
	GREATER_EQUAL  reduce 94
	LESS_EQUAL  reduce 94
	EQUAL  reduce 94
	NOT_EQUAL  reduce 94
	'+'  reduce 94
	'-'  reduce 94
	'*'  reduce 94
	'/'  reduce 94
	','  reduce 94
	')'  reduce 94
	'<'  reduce 94
	'>'  reduce 94


state 51
	exp_aritmetica : termino .  (77)
	termino : termino . '*' factor  (84)
	termino : termino . '/' factor  (85)
	termino : termino . '*' '*' factor  (87)
	termino : termino . '*' '/' factor  (88)
	termino : termino . '/' '*' factor  (89)
	termino : termino . '/' '/' factor  (90)

	'*'  shift 108
	'/'  shift 109
	GREATER_EQUAL  reduce 77
	LESS_EQUAL  reduce 77
	EQUAL  reduce 77
	NOT_EQUAL  reduce 77
	'+'  reduce 77
	'-'  reduce 77
	','  reduce 77
	')'  reduce 77
	'<'  reduce 77
	'>'  reduce 77


state 52
	termino : factor .  (86)

	.  reduce 86


state 53
	prog : '{' sentencias '}' .  (1)

	.  reduce 1


state 54
	sentencias : sentencias sen_declarativa .  (3)

	.  reduce 3


state 55
	sentencias : sentencias sen_ejecutable .  (4)

	.  reduce 4


state 56
	sentencias : sentencias sen_control .  (5)

	.  reduce 5


state 57
	list_var : ID .  (27)

	.  reduce 27


state 58
	sen_declarativa : tipo list_var . ','  (10)
	sen_declarativa : tipo list_var .  (12)
	list_var : list_var . ';' ID  (26)

	','  shift 110
	';'  shift 111
	$end  reduce 12
	ID  reduce 12
	IF  reduce 12
	PRINT  reduce 12
	CLASS  reduce 12
	VOID  reduce 12
	WHILE  reduce 12
	SHORT  reduce 12
	UINT  reduce 12
	FLOAT  reduce 12
	RETURN  reduce 12
	CHECK  reduce 12
	'}'  reduce 12
	'='  reduce 12


state 59
	tipo : ID .  (19)

	.  reduce 19


state 60
	sen_declarativa : sentencia_check tipo . list_var ','  (11)

	ID  shift 57
	.  error

	list_var  goto 112


state 61
	funcion : header_funcion '{' . cuerpo_funcion sen_retorno '}'  (28)
	funcion : header_funcion '{' . cuerpo_funcion seleccion_func '}'  (29)

	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	CHECK  shift 13
	'='  shift 14
	.  error

	sen_declarativa  goto 62
	sen_ejecutable  goto 63
	tipo  goto 19
	sentencia_check  goto 20
	funcion  goto 21
	clase  goto 22
	header_funcion  goto 23
	cuerpo_funcion  goto 113
	asignacion  goto 24
	inv_funcion  goto 25
	seleccion  goto 26
	imprimir  goto 27
	inv_metodo  goto 28
	atributo_clase  goto 29
	class_header  goto 31


state 62
	cuerpo_funcion : sen_declarativa .  (36)

	.  reduce 36


state 63
	cuerpo_funcion : sen_ejecutable .  (37)

	.  reduce 37


state 64
	funcion : header_funcion cuerpo_funcion . '}'  (30)
	cuerpo_funcion : cuerpo_funcion . sen_declarativa  (34)
	cuerpo_funcion : cuerpo_funcion . sen_ejecutable  (35)

	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	CHECK  shift 13
	'}'  shift 114
	'='  shift 14
	.  error

	sen_declarativa  goto 115
	sen_ejecutable  goto 116
	tipo  goto 19
	sentencia_check  goto 20
	funcion  goto 21
	clase  goto 22
	header_funcion  goto 23
	asignacion  goto 24
	inv_funcion  goto 25
	seleccion  goto 26
	imprimir  goto 27
	inv_metodo  goto 28
	atributo_clase  goto 29
	class_header  goto 31


state 65
	sen_ejecutable : asignacion ',' .  (39)

	.  reduce 39


state 66
	sen_ejecutable : inv_funcion ',' .  (40)

	.  reduce 40


state 67
	sen_ejecutable : seleccion ',' .  (41)

	.  reduce 41


state 68
	sen_ejecutable : imprimir ',' .  (42)

	.  reduce 42


state 69
	sen_ejecutable : inv_metodo ',' .  (43)

	.  reduce 43


state 70
	inv_metodo : atributo_clase '(' . exp_aritmetica ')'  (55)
	inv_metodo : atributo_clase '(' . ')'  (56)
	inv_metodo : atributo_clase '(' .  (57)

	ID  shift 43
	CTE_SHORT  shift 44
	CTE_UINT  shift 45
	CTE_FLOAT  shift 46
	'-'  shift 47
	')'  shift 117
	','  reduce 57

	CTE  goto 48
	exp_aritmetica  goto 118
	atributo_clase  goto 50
	termino  goto 51
	factor  goto 52


state 71
	inv_metodo : atributo_clase ')' .  (58)

	.  reduce 58


state 72
	asignacion : atributo_clase '=' . exp_aritmetica  (45)
	asignacion : atributo_clase '=' .  (48)

	ID  shift 43
	CTE_SHORT  shift 44
	CTE_UINT  shift 45
	CTE_FLOAT  shift 46
	'-'  shift 47
	','  reduce 48

	CTE  goto 48
	exp_aritmetica  goto 119
	atributo_clase  goto 50
	termino  goto 51
	factor  goto 52


state 73
	atributo_clase : atributo_clase '.' . ID  (60)

	ID  shift 120
	.  error


state 74
	asignacion : atributo_clase exp_aritmetica .  (49)
	exp_aritmetica : exp_aritmetica . '+' termino  (75)
	exp_aritmetica : exp_aritmetica . '-' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (78)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (79)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (81)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (82)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (83)

	'+'  shift 106
	'-'  shift 107
	','  reduce 49


state 75
	sen_control : inicio_while condicion . DO bloque_sen_ejecutable ','  (113)
	sen_control : inicio_while condicion . DO ','  (114)

	DO  shift 121
	.  error


state 76
	tipo : ID .  (19)
	herencia_clase : ID . ','  (127)

	','  shift 122
	ID  reduce 19


state 77
	clase : class_header '{' . '}'  (116)
	clase : class_header '{' . cuerpo_clase '}'  (117)
	clase : class_header '{' . cuerpo_clase herencia_clase '}'  (118)
	clase : class_header '{' . herencia_clase '}'  (119)

	ID  shift 76
	CLASS  shift 7
	VOID  shift 8
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	CHECK  shift 13
	'}'  shift 123
	.  error

	sen_declarativa  goto 78
	tipo  goto 19
	sentencia_check  goto 20
	funcion  goto 21
	clase  goto 22
	header_funcion  goto 23
	class_header  goto 31
	cuerpo_clase  goto 124
	herencia_clase  goto 125


state 78
	cuerpo_clase : sen_declarativa .  (126)

	.  reduce 126


state 79
	clase : class_header cuerpo_clase . '}'  (121)
	cuerpo_clase : cuerpo_clase . sen_declarativa  (123)
	cuerpo_clase : cuerpo_clase . herencia_clase sen_declarativa  (124)

	ID  shift 76
	CLASS  shift 7
	VOID  shift 8
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	CHECK  shift 13
	'}'  shift 126
	.  error

	sen_declarativa  goto 127
	tipo  goto 19
	sentencia_check  goto 20
	funcion  goto 21
	clase  goto 22
	header_funcion  goto 23
	class_header  goto 31
	herencia_clase  goto 128


state 80
	cuerpo_clase : herencia_clase . sen_declarativa  (125)

	ID  shift 59
	CLASS  shift 7
	VOID  shift 8
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	CHECK  shift 13
	.  error

	sen_declarativa  goto 129
	tipo  goto 19
	sentencia_check  goto 20
	funcion  goto 21
	clase  goto 22
	header_funcion  goto 23
	class_header  goto 31


state 81
	inv_funcion : ID '(' ')' .  (51)

	.  reduce 51


state 82
	inv_funcion : ID '(' exp_aritmetica . ')'  (50)
	inv_funcion : ID '(' exp_aritmetica .  (52)
	exp_aritmetica : exp_aritmetica . '+' termino  (75)
	exp_aritmetica : exp_aritmetica . '-' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (78)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (79)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (81)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (82)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (83)

	'+'  shift 106
	'-'  shift 107
	')'  shift 130
	','  reduce 52


state 83
	asignacion : ID '=' exp_aritmetica .  (44)
	exp_aritmetica : exp_aritmetica . '+' termino  (75)
	exp_aritmetica : exp_aritmetica . '-' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (78)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (79)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (81)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (82)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (83)

	'+'  shift 106
	'-'  shift 107
	','  reduce 44


state 84
	atributo_clase : ID '.' ID .  (59)

	.  reduce 59


state 85
	comparador : GREATER_EQUAL .  (97)

	.  reduce 97


state 86
	comparador : LESS_EQUAL .  (98)

	.  reduce 98


state 87
	comparador : EQUAL .  (96)

	.  reduce 96


state 88
	comparador : NOT_EQUAL .  (95)

	.  reduce 95


state 89
	comparador : '<' .  (99)

	.  reduce 99


state 90
	comparador : '>' .  (100)

	.  reduce 100


state 91
	exp_logica : exp_aritmetica . comparador exp_aritmetica  (70)
	exp_logica : exp_aritmetica . comparador  (71)
	exp_logica : exp_aritmetica .  (73)
	exp_aritmetica : exp_aritmetica . '+' termino  (75)
	exp_aritmetica : exp_aritmetica . '-' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (78)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (79)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (81)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (82)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (83)

	GREATER_EQUAL  shift 85
	LESS_EQUAL  shift 86
	EQUAL  shift 87
	NOT_EQUAL  shift 88
	'+'  shift 106
	'-'  shift 107
	'<'  shift 89
	'>'  shift 90
	')'  reduce 73

	comparador  goto 131


state 92
	condicion : '(' exp_logica . ')'  (69)

	')'  shift 132
	.  error


state 93
	exp_logica : comparador . exp_aritmetica  (72)
	exp_logica : comparador .  (74)

	ID  shift 43
	CTE_SHORT  shift 44
	CTE_UINT  shift 45
	CTE_FLOAT  shift 46
	'-'  shift 47
	')'  reduce 74

	CTE  goto 48
	exp_aritmetica  goto 133
	atributo_clase  goto 50
	termino  goto 51
	factor  goto 52


state 94
	asignacion : ID . '=' exp_aritmetica  (44)
	asignacion : ID . '='  (46)
	inv_funcion : ID . '(' exp_aritmetica ')'  (50)
	inv_funcion : ID . '(' ')'  (51)
	inv_funcion : ID . '(' exp_aritmetica  (52)
	inv_funcion : ID . ')'  (53)
	inv_funcion : ID . '('  (54)
	atributo_clase : ID . '.' ID  (59)

	'('  shift 33
	')'  shift 34
	'='  shift 35
	'.'  shift 36
	.  error


state 95
	bloque_sen_ejecutable : '{' . sen_ejecutable_r '}'  (102)
	bloque_sen_ejecutable : '{' . sen_ejecutable_r  (104)
	bloque_sen_ejecutable : '{' . '}'  (105)

	ID  shift 94
	IF  shift 5
	PRINT  shift 6
	'}'  shift 134
	'='  shift 14
	.  error

	sen_ejecutable  goto 135
	asignacion  goto 24
	inv_funcion  goto 25
	seleccion  goto 26
	imprimir  goto 27
	inv_metodo  goto 28
	atributo_clase  goto 29
	sen_ejecutable_r  goto 136


state 96
	bloque_sen_ejecutable : sen_ejecutable .  (101)
	sen_ejecutable_r : sen_ejecutable .  (110)

	ID  reduce 110
	IF  reduce 110
	ELSE  reduce 101
	END_IF  reduce 101
	PRINT  reduce 110
	'}'  reduce 110
	','  reduce 101
	'='  reduce 110


state 97
	seleccion : IF condicion cuerpo_then . END_IF  (65)
	seleccion : IF condicion cuerpo_then . ELSE cuerpo_else END_IF  (66)

	ELSE  shift 137
	END_IF  shift 138
	.  error


state 98
	cuerpo_then : bloque_sen_ejecutable .  (67)

	.  reduce 67


state 99
	bloque_sen_ejecutable : sen_ejecutable_r . '}'  (103)
	sen_ejecutable_r : sen_ejecutable_r . sen_ejecutable  (109)

	ID  shift 94
	IF  shift 5
	PRINT  shift 6
	'}'  shift 139
	'='  shift 14
	.  error

	sen_ejecutable  goto 140
	asignacion  goto 24
	inv_funcion  goto 25
	seleccion  goto 26
	imprimir  goto 27
	inv_metodo  goto 28
	atributo_clase  goto 29


state 100
	clase : CLASS ID ',' .  (120)

	.  reduce 120


state 101
	header_funcion : VOID ID '(' . parametro ')'  (31)
	header_funcion : VOID ID '(' . ')'  (32)

	ID  shift 59
	SHORT  shift 10
	UINT  shift 11
	FLOAT  shift 12
	')'  shift 141
	.  error

	tipo  goto 142
	parametro  goto 143


state 102
	factor : ID INCREMENT .  (92)

	.  reduce 92


state 103
	CTE : '-' CTE_SHORT .  (23)

	.  reduce 23


state 104
	CTE : '-' CTE_UINT .  (25)

	.  reduce 25


state 105
	CTE : '-' CTE_FLOAT .  (24)

	.  reduce 24


state 106
	exp_aritmetica : exp_aritmetica '+' . termino  (75)
	exp_aritmetica : exp_aritmetica '+' . '+' termino  (78)
	exp_aritmetica : exp_aritmetica '+' . '*' termino  (79)
	exp_aritmetica : exp_aritmetica '+' . '/' termino  (80)
